# shift_and_stack

./: README.md  pyproject.toml
example/: config.yml
example/data/fits6/: frame_0_objects.csv  frame_10_objects.csv  frame_10_stars.csv  frame_11_image.fits  frame_11_objects.csv  frame_12_objects.csv  frame_13_image.fits  frame_15_objects.csv  frame_16_image.fits  frame_16_stars.csv  frame_18_image.fits  frame_18_objects.csv  frame_18_stars.csv  frame_19_image.fits  frame_19_objects.csv  frame_1_objects.csv  frame_20_objects.csv  frame_21_image.fits  frame_21_objects.csv  frame_22_image.fits  frame_23_stars.csv  frame_24_image.fits  frame_24_stars.csv  frame_25_stars.csv  frame_26_stars.csv  frame_28_image.fits  frame_29_image.fits  frame_29_objects.csv  frame_2_image.fits  frame_30_stars.csv  frame_31_image.fits  frame_31_objects.csv  frame_31_stars.csv  frame_32_image.fits  frame_33_stars.csv  frame_34_image.fits  frame_36_image.fits  frame_36_stars.csv  frame_37_objects.csv  frame_37_stars.csv  (+32 more)
example/data/stars/: tycho_catalog_export.csv
src/shift_and_stack/: __main__.py  compute_parameters.py  detection.py  filtering.py  hypothesis.py  load_config.py  load_files.py  preprocess.py  results.py  shift_and_stack.py  visualize.py
src/shift_and_stack/data/fits6/: frame_0_image.fits  frame_0_stars.csv  frame_10_image.fits  frame_11_stars.csv  frame_12_image.fits  frame_12_stars.csv  frame_13_objects.csv  frame_13_stars.csv  frame_14_image.fits  frame_14_objects.csv  frame_14_stars.csv  frame_15_image.fits  frame_15_stars.csv  frame_16_objects.csv  frame_17_image.fits  (+63 more)
