[tool.poetry]
name = "shift-and-stack"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "shift_and_stack"}]

[tool.poetry.dependencies]
python = ">=3.12"
numpy = "^2.2.6"
astropy = "^7.1.0"
opencv-python = "^4.11.0.86"
matplotlib = "^3.10.3"
pandas = "^2.2.3"
scipy = "^1.15.3"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
